--- a/AvaloniaHotMarkdown.Demo/AvaloniaHotMarkdown.Demo.csproj
+++ b/AvaloniaHotMarkdown.Demo/AvaloniaHotMarkdown.Demo.csproj
@@ -21,6 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Avalonia.HotMarkdown\Avalonia.HotMarkdown.csproj" />
+    <ProjectReference Include="..\AvaloniaHotMarkdown\AvaloniaHotMarkdown.csproj" />
   </ItemGroup>
 </Project>
