--- a/AvaloniaHotMarkdown/AvaloniaHotMarkdown.csproj
+++ b/AvaloniaHotMarkdown/AvaloniaHotMarkdown.csproj
@@ -5,6 +5,14 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Avalonia.HotMarkdown</Title>
+    <Authors>Qzername</Authors>
+    <Company>Qzername</Company>
+    <Description>Work-in-progress prototype of a live-preview markdown editor for Avalonia</Description>
+    <FileVersion>0.1.0</FileVersion>
+    <AssemblyVersion>0.1.0</AssemblyVersion>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
