--- a/AvaloniaHotMarkdown/AvaloniaHotMarkdown.csproj
+++ b/AvaloniaHotMarkdown/AvaloniaHotMarkdown.csproj
@@ -12,11 +12,27 @@
     <Description>Work-in-progress prototype of a live-preview markdown editor for Avalonia</Description>
     <Version>0.1.0</Version>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<PackageIcon>icon.png</PackageIcon>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.2" />
     <PackageReference Include="Markdig" Version="0.41.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
