--- a/AvaloniaHotMarkdown/AvaloniaHotMarkdown.csproj
+++ b/AvaloniaHotMarkdown/AvaloniaHotMarkdown.csproj
@@ -10,7 +10,7 @@
     <Authors>Qzername</Authors>
     <Company>Qzername</Company>
     <Description>Work-in-progress prototype of a live-preview markdown editor for Avalonia</Description>
-    <Version>0.2.2-b</Version>
+    <Version>0.2.4</Version>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<PackageIcon>icon.png</PackageIcon>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
